--- a/yatube/templates/posts/follow.html
+++ b/yatube/templates/posts/follow.html
@@ -5,6 +5,7 @@
   <div class="container py-5">
     <h1>Посты избранных авторов</h1>
     <article>
+      {% include 'posts/includes/switcher.html' with follow=True %}
       {% load cache %}
       {% cache 20 index page %}
       {% for post in page_obj %}
